# terminal_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  game  game.cpp  game.h  main.cpp
docs/: tech.wsd
i-o/src/: output.cpp  output.h  test.cpp
i-o/test/: menu
io/: Makefile
io/src/: input.cpp  input.h  io.h  output.cpp  output.h  test.cpp  test2.cpp
io/test/: menu
sem/: fulecoSimpleSemaphore.cpp  test  test.cpp  test_lib  test_lib.cpp  test_lib.h
semaphore/: Makefile
semaphore/src/: fulecoSimpleSemaphore.cpp  fulecoSimpleSemaphore.h
src/: Makefile  character.cpp  character.h  fulecoSimpleSemaphore.cpp  fulecoSimpleSemaphore.h  item.cpp  item.h  main.cpp  map.cpp  map.h  output.cpp  output.h  position.cpp  position.h  semTest.cpp
src/maps/: map_1.txt
